# ziplode

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
GUI/: FileList.cpp  FileList.h  FileListTab.cpp  FileListTab.h  TabView.cpp  TabView.h  TabViewTab.cpp  TabViewTab.h  UIHandler.cpp  UIHandler.h  WindowMain.cpp  WindowMain.h
Source/: AppInfo.cpp  AppInfo.h  Main.cpp  Main.h  Resources.h
Source/Core/: ActionIDs.h  DirectoryContent.cpp  DirectoryContent.h  DirectoryItem.cpp  DirectoryItem.h  FileSystemDirectoryContent.cpp  FileSystemDirectoryContent.h  PathChangedSignal.h  PathManager.cpp  PathManager.h  ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h  SignalManager.cpp  StateManager.cpp  StateManager.h  Util.cpp  Util.h
Source/Directory/: DirectoryContent.cpp  DirectoryContent.h  DirectoryItem.cpp  DirectoryItem.h  FileSystemDirectoryContent.cpp
Source/Enum/: ActionIDs.h  Directions.h
Source/GUI/: FileList.cpp  FileList.h  MenuBar.cpp  MenuBar.h  Resources.cpp  Resources.h  StatusBar.cpp  StatusBar.h  ToolBar.cpp  ToolBar.h  WindowMain.cpp  WindowMain.h
Source/Path/: PathChangedSignal.cpp  PathChangedSignal.h  PathManager.h
Source/Resource/: ResourceManager.h
Source/Selection/: SelectionManager.cpp  SelectionManager.h
Source/Signal/: Signal.h  SignalManager.cpp  SignalManager.h  SignalReceiver.h
Source/State/: StateManager.cpp  StateManager.h  StateUser.cpp  StateUser.h
Source/Util/: AppInfo.cpp  AppInfo.h  Util.cpp  Util.h
